# Django-lom

./: .coveragerc  .env-example  manage.py  pyproject.toml  pytest.ini  readme.md
authors/: admin.py  models.py  signals.py  urls.py  views.py
authors/forms/: login.py  recipe_form.py  register_form.py
authors/migrations/: 0001_initial.py
authors/templates/authors/pages/: dashboard.html  dashboard_recipe.html  login.html
authors/templates/authors/partials/: login_message.html
authors/tests/: test_author_logout.py  test_author_register.py
authors/views/: __init__.py  all.py  dashboard_recipe.py  profile.py
base_static/global/css/: global-style.css  styles.css
base_templates/global/: base.html
base_templates/global/partials/: search.html
project/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: admin.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_rename_authon_recipe_author.py  0003_rename_servings_time_recipe_servings_and_more.py  0004_alter_category_name.py  0005_alter_recipe_slug.py  0006_alter_recipe_preparation_time_alter_recipe_servings.py
recipes/tests/: fixtures.py  test_category_model.py  test_recipe_category_view.py  test_recipe_detail_view.py  test_recipe_home_view.py  test_recipe_models.py  test_recipe_search_view.py  test_recipe_urls.py  test_recipe_views.py
tests/functional_tests/authors/: base.py  test_authors_login.py  test_authors_register.py
tests/functional_tests/recipes/: base.py  test_recipe_home_page.py
utils/: browser.py  django_forms.py  pagination.py  strings.py
utils/recipes/: factory.py
(+10 files in other folders)
