[project]
name = "django-lom"
version = "0.1.0"
description = ""
authors = [
    {name = "Elias Moura",email = "elias.smourayt@gmail.com"}
]
readme = "README.md"
requires-python = "=3.12.10"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
coverage = "coverage run -m pytest && coverage html"
test = "pytest"
unit-test = "pytest -m 'not functional_test' -rP"
functional-test = "pytest -m 'functional_test' -rP"
start = "python manage.py runserver"

[tool.poetry.group.dev.dependencies]
faker = "^37.3.0"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
parameterized = "^0.9.0"
coverage = "^7.9.1"
taskipy = "^1.14.1"
selenium = "^4.34.2"
webdriver-manager = "^4.0.2"
black = "^25.1.0"

